fix(popover): removed arrow overlap on trigger (#DS-4125)

--- a/packages/components/popover/_popover-theme.scss
+++ b/packages/components/popover/_popover-theme.scss
@@ -10,7 +10,7 @@
     }
 
     .kbq-popover__arrow {
-        box-shadow: var(--kbq-popover-container-shadow);
+        box-shadow: inset var(--kbq-popover-container-shadow);
         background: var(--kbq-popover-container-background);
     }
 
